--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,25 +1,28 @@
 name: Generate Snake
 
 on:
+  workflow_dispatch: # ম্যানুয়ালি বা future schedule
   schedule:
-    - cron: "0 */12 * * *" # প্রতি 12 ঘণ্টা পর পর রান হবে
-  workflow_dispatch:
+    - cron: "0 */12 * * *" # প্রতি 12 ঘণ্টা
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@v3
-        id: snake
+      - uses: actions/checkout@v3
+
+      - name: Generate contribution snake
+        uses: Platane/snk@v3
         with:
-          github_user_name: FarukReactDev
+          github_user_name: farukreactdev
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg
-      - name: Push snake animation
-        uses: crazy-max/ghaction-github-pages@v3
+
+      - name: Push generated snake
+        uses: actions-hub/gulp-gh-pages@v1
         with:
-          target_branch: output
-          build_dir: dist
+          branch: output
+          folder: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
