--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,15 +1,25 @@
 name: Generate Snake
 
 on:
-  workflow_dispatch:
   schedule:
     - cron: "0 */12 * * *"
+
+  workflow_dispatch:
+
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Generate contribution snake
         uses: Platane/snk@v3
@@ -17,12 +27,12 @@ jobs:
           github_user_name: farukreactdev
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Push generated snake
-        uses: actions-hub/gulp-gh-pages@v1
+      - name: Push generated snake to output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          branch: output
-          folder: dist
+          target_branch: output
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
